Fix build for clang-700.0.59.5 by replacing deprecated calls to convert points between screen and window coordinates for Mac. https://bugs.webkit.org/show_bug.cgi?id=150379

Patch by Gordon Sheridan <gordon_sheridan@apple.com> on 2015-10-22
Reviewed by Andy Estes.

Source/WebCore:

Provide WAKWindow versions of the non-deprecated methods for converting an NSRect between
window and screen coordinates, which replace the deprecated methods that operated on an NSPoint.

* platform/ios/wak/WAKWindow.h:
* platform/ios/wak/WAKWindow.mm:
(-[WAKWindow convertRectToScreen:]): Added.
(-[WAKWindow convertRectFromScreen:]): Added.

Source/WebKit/mac:

* WebView/WebHTMLView.mm:
(-[WebHTMLView characterIndexForPoint:]):
Convert point to rect, and replace call to deprecated convertScreenToBase: with convertRectFromScreen:.

(-[WebHTMLView firstRectForCharacterRange:]):
Replace call to deprecated convertBaseToScreen: with convertRectToScreen:.

Canonical link: https://commits.webkit.org/168638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191484 268f45cc-cd09-0410-ab3c-d52691b4dbfc